--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LineOfCollimation"></activity>
+        <activity android:name=".RiseAndFall"></activity>
+        <activity android:name=".LineOfCollimation" />
         <activity android:name=".RiseFall" />
         <activity android:name=".MidOrdinate" />
         <activity android:name=".Simpson" />
